# Backtest-Lab

./: README.md  docker-compose.test.yml  docker-compose.yml  index.html  package-lock.json  package.json  requirements.txt
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/versions/: 0001_initial_schema.py  0002_auth_and_user_scoping.py
backend/app/: main.py  models.py  schemas.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  datasets.py  health.py  platform.py  sessions.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/services/: csv_parser.py  security.py
backend/backtest_lab_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/quality_reports/: lighter_btc_m1_2025-01-01_2025-01-31_quality_20260624T123916Z.json
data/validated/lighter/btc/m1/: lighter_btc_m1_2025-01-01_2025-01-31.parquet
docs/: ARCHITECTURE.md  FEATURE_CHECKLIST.md
src/: App.css  App.tsx  check_lighter.py  collect_lighter_btc.py  config.py  index.css  inspect_data.py  types.ts  validate_data.py
src/components/: ReplayChart.tsx
src/data/: sampleCandles.ts
src/lib/: api.ts  replay.ts
