[project]
name = "backtest-lab-api"
version = "0.1.0"
description = "FastAPI backend for Backtest Lab"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.17.0",
  "asyncpg>=0.31.0",
  "fastapi[standard]>=0.125.0",
  "pydantic-settings>=2.12.0",
  "python-multipart>=0.0.20",
  "sqlalchemy[asyncio]>=2.0.45",
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
